# Nonviolent_app

./: .gitignore  pyproject.toml  readme.md
final_project/final_project/: asgi.py  settings.py  urls.py  wsgi.py
final_project/nvc/: admin.py  apps.py  models.py  urls.py  views.py
final_project/nvc/migrations/: 0001_initial.py  0002_feelingselection_feelingsession_and_more.py  0003_feelinggroup_feeling_group.py  0004_auto_20230327_1304.py
final_project/nvc/templates/nvc/: feelings.html  homepage.html
